Complete write / read example